# trading-sim-ui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  SmaCross.html  app.py  calculate_top_n_stocks.ipynb  chatgpt_notes.md  config.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  strategy_backtesting.ipynb  useful_documentation.md
.github/workflows/: docker-build-test.yml  pylint.yml
data/: nasdaq-symbols.txt
data/processed_data/: bt_strategy_result.pkl
notebooks/: download-nasdaq-historical-data.ipynb
poc_app/: app.py  dockerfile
poc_app/pages/: result.py
src/: data_prep.py  download-tickers.py  metrics.py  strategy.py  upload_ticker_data_to_database.py  utils.py
tests/: manual_sharpe_ratio_calculation.xlsx  test_data_prep.py  test_metrics.py  test_utils.py
