[tool.poetry]
name = "poc-app"
version = "0.1.0"
description = ""
authors = ["ManuelCorsetti <42147538+ManuelCorsetti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
