[tool.poetry]
name = "trading-strategy"
version = "0.1.0"
description = ""
authors = ["ManuelCorsetti <42147538+ManuelCorsetti@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bt = "^1.0.0"
streamlit = "^1.33.0"
black = "^24.4.2"
pytest = "^8.2.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
